sdk/storagesync/arm-storagesync/samples/v9/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                           | **Description**                                                                                                                                                                                                                                                                   |
| ----------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [cloudEndpointsCreate.js][cloudendpointscreate]                                                                         | Create a new CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Create.json                                                                                                            |
| [cloudEndpointsCreateSample.js][cloudendpointscreatesample]                                                             | Create a new CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Create.json                                                                                                            |
| [cloudEndpointsDelete.js][cloudendpointsdelete]                                                                         | Delete a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Delete.json                                                                                                          |
| [cloudEndpointsDeleteSample.js][cloudendpointsdeletesample]                                                             | Delete a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Delete.json                                                                                                          |
| [cloudEndpointsGet.js][cloudendpointsget]                                                                               | Get a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Get.json                                                                                                                |
| [cloudEndpointsGetSample.js][cloudendpointsgetsample]                                                                   | Get a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_Get.json                                                                                                                |
| [cloudEndpointsListBySyncGroup.js][cloudendpointslistbysyncgroup]                                                       | Get a CloudEndpoint List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_ListBySyncGroup.json                                                                                                     |
| [cloudEndpointsListBySyncGroupSample.js][cloudendpointslistbysyncgroupsample]                                           | Get a CloudEndpoint List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_ListBySyncGroup.json                                                                                                     |
| [cloudEndpointsPostBackup.js][cloudendpointspostbackup]                                                                 | Post Backup a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PostBackup.json                                                                                                 |
| [cloudEndpointsPostBackupSample.js][cloudendpointspostbackupsample]                                                     | Post Backup a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PostBackup.json                                                                                                 |
| [cloudEndpointsPostRestore.js][cloudendpointspostrestore]                                                               | Post Restore a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PostRestore.json                                                                                               |
| [cloudEndpointsPostRestoreSample.js][cloudendpointspostrestoresample]                                                   | Post Restore a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PostRestore.json                                                                                               |
| [cloudEndpointsPreBackup.js][cloudendpointsprebackup]                                                                   | Pre Backup a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PreBackup.json                                                                                                   |
| [cloudEndpointsPreBackupSample.js][cloudendpointsprebackupsample]                                                       | Pre Backup a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PreBackup.json                                                                                                   |
| [cloudEndpointsPreRestore.js][cloudendpointsprerestore]                                                                 | Pre Restore a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PreRestore.json                                                                                                 |
| [cloudEndpointsPreRestoreSample.js][cloudendpointsprerestoresample]                                                     | Pre Restore a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_PreRestore.json                                                                                                 |
| [cloudEndpointsRestoreheartbeat.js][cloudendpointsrestoreheartbeat]                                                     | Restore Heartbeat a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_RestoreHeatbeat.json                                                                                      |
| [cloudEndpointsRestoreheartbeatSample.js][cloudendpointsrestoreheartbeatsample]                                         | Restore Heartbeat a given CloudEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_RestoreHeatbeat.json                                                                                      |
| [cloudEndpointsTriggerChangeDetection.js][cloudendpointstriggerchangedetection]                                         | Triggers detection of changes performed on Azure File share connected to the specified Azure File Sync Cloud Endpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_TriggerChangeDetection.json |
| [cloudEndpointsTriggerChangeDetectionSample.js][cloudendpointstriggerchangedetectionsample]                             | Triggers detection of changes performed on Azure File share connected to the specified Azure File Sync Cloud Endpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/CloudEndpoints_TriggerChangeDetection.json |
| [locationOperationStatusSample.js][locationoperationstatussample]                                                       | Get Operation status x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/LocationOperationStatus_Get.json                                                                                                             |
| [operationStatusGetSample.js][operationstatusgetsample]                                                                 | Get Operation status x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/OperationStatus_Get.json                                                                                                                     |
| [operationsList.js][operationslist]                                                                                     | Lists all of the available Storage Sync Rest API operations. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Operations_List.json                                                                                 |
| [operationsListSample.js][operationslistsample]                                                                         | Lists all of the available Storage Sync Rest API operations. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Operations_List.json                                                                                 |
| [privateEndpointConnectionsCreate.js][privateendpointconnectionscreate]                                                 | Update the state of specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Create.json                        |
| [privateEndpointConnectionsCreateSample.js][privateendpointconnectionscreatesample]                                     | Update the state of specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Create.json                        |
| [privateEndpointConnectionsDelete.js][privateendpointconnectionsdelete]                                                 | Deletes the specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Delete.json                                |
| [privateEndpointConnectionsDeleteSample.js][privateendpointconnectionsdeletesample]                                     | Deletes the specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Delete.json                                |
| [privateEndpointConnectionsGet.js][privateendpointconnectionsget]                                                       | Gets the specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Get.json                                      |
| [privateEndpointConnectionsGetSample.js][privateendpointconnectionsgetsample]                                           | Gets the specified private endpoint connection associated with the storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_Get.json                                      |
| [privateEndpointConnectionsListByStorageSyncService.js][privateendpointconnectionslistbystoragesyncservice]             | Get a PrivateEndpointConnection List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_ListByStorageSyncService.json                                                                    |
| [privateEndpointConnectionsListByStorageSyncServiceSample.js][privateendpointconnectionslistbystoragesyncservicesample] | Get a PrivateEndpointConnection List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateEndpointConnections_ListByStorageSyncService.json                                                                    |
| [privateLinkResourcesList.js][privatelinkresourceslist]                                                                 | Gets the private link resources that need to be created for a storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateLinkResources_List.json                                                |
| [privateLinkResourcesListByStorageSyncServiceSample.js][privatelinkresourceslistbystoragesyncservicesample]             | Gets the private link resources that need to be created for a storage sync service. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/PrivateLinkResources_List.json                                                |
| [registeredServersCreate.js][registeredserverscreate]                                                                   | Add a new registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Create.json                                                                                                        |
| [registeredServersCreateSample.js][registeredserverscreatesample]                                                       | Add a new registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Create.json                                                                                                        |
| [registeredServersDelete.js][registeredserversdelete]                                                                   | Delete the given registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Delete.json                                                                                                 |
| [registeredServersDeleteSample.js][registeredserversdeletesample]                                                       | Delete the given registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Delete.json                                                                                                 |
| [registeredServersGet.js][registeredserversget]                                                                         | Get a given registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Get.json                                                                                                         |
| [registeredServersGetSample.js][registeredserversgetsample]                                                             | Get a given registered server. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_Get.json                                                                                                         |
| [registeredServersListByStorageSyncService.js][registeredserverslistbystoragesyncservice]                               | Get a given registered server list. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_ListByStorageSyncService.json                                                                               |
| [registeredServersListByStorageSyncServiceSample.js][registeredserverslistbystoragesyncservicesample]                   | Get a given registered server list. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_ListByStorageSyncService.json                                                                               |
| [registeredServersTriggerRollover.js][registeredserverstriggerrollover]                                                 | Triggers Server certificate rollover. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_TriggerRollover.json                                                                                      |
| [registeredServersTriggerRolloverSample.js][registeredserverstriggerrolloversample]                                     | Triggers Server certificate rollover. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/RegisteredServers_TriggerRollover.json                                                                                      |
| [serverEndpointsCreate.js][serverendpointscreate]                                                                       | Create a new ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Create.json                                                                                                          |
| [serverEndpointsCreateSample.js][serverendpointscreatesample]                                                           | Create a new ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Create.json                                                                                                          |
| [serverEndpointsDelete.js][serverendpointsdelete]                                                                       | Delete a given ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Delete.json                                                                                                        |
| [serverEndpointsDeleteSample.js][serverendpointsdeletesample]                                                           | Delete a given ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Delete.json                                                                                                        |
| [serverEndpointsGet.js][serverendpointsget]                                                                             | Get a ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Get.json                                                                                                                    |
| [serverEndpointsGetSample.js][serverendpointsgetsample]                                                                 | Get a ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Get.json                                                                                                                    |
| [serverEndpointsListBySyncGroup.js][serverendpointslistbysyncgroup]                                                     | Get a ServerEndpoint list. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_ListBySyncGroup.json                                                                                                   |
| [serverEndpointsListBySyncGroupSample.js][serverendpointslistbysyncgroupsample]                                         | Get a ServerEndpoint list. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_ListBySyncGroup.json                                                                                                   |
| [serverEndpointsRecallAction.js][serverendpointsrecallaction]                                                           | Recall a server endpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Recall.json                                                                                                             |
| [serverEndpointsRecallActionSample.js][serverendpointsrecallactionsample]                                               | Recall a server endpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Recall.json                                                                                                             |
| [serverEndpointsUpdate.js][serverendpointsupdate]                                                                       | Patch a given ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Update.json                                                                                                         |
| [serverEndpointsUpdateSample.js][serverendpointsupdatesample]                                                           | Patch a given ServerEndpoint. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/ServerEndpoints_Update.json                                                                                                         |
| [storageSyncServiceCheckNameAvailabilityAlreadyExists.js][storagesyncservicechecknameavailabilityalreadyexists]         | Check the give namespace name availability. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServiceCheckNameAvailability_AlreadyExists.json                                                            |
| [storageSyncServiceCheckNameAvailabilityAvailable.js][storagesyncservicechecknameavailabilityavailable]                 | Check the give namespace name availability. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServiceCheckNameAvailability_Available.json                                                                |
| [storageSyncServicesCheckNameAvailabilitySample.js][storagesyncserviceschecknameavailabilitysample]                     | Check the give namespace name availability. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServiceCheckNameAvailability_AlreadyExists.json                                                            |
| [storageSyncServicesCreate.js][storagesyncservicescreate]                                                               | Create a new StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Create.json                                                                                                  |
| [storageSyncServicesCreateSample.js][storagesyncservicescreatesample]                                                   | Create a new StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Create.json                                                                                                  |
| [storageSyncServicesDelete.js][storagesyncservicesdelete]                                                               | Delete a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Delete.json                                                                                                |
| [storageSyncServicesDeleteSample.js][storagesyncservicesdeletesample]                                                   | Delete a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Delete.json                                                                                                |
| [storageSyncServicesGet.js][storagesyncservicesget]                                                                     | Get a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Get.json                                                                                                      |
| [storageSyncServicesGetSample.js][storagesyncservicesgetsample]                                                         | Get a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Get.json                                                                                                      |
| [storageSyncServicesListByResourceGroup.js][storagesyncserviceslistbyresourcegroup]                                     | Get a StorageSyncService list by Resource group name. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_ListByResourceGroup.json                                                                |
| [storageSyncServicesListByResourceGroupSample.js][storagesyncserviceslistbyresourcegroupsample]                         | Get a StorageSyncService list by Resource group name. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_ListByResourceGroup.json                                                                |
| [storageSyncServicesListBySubscription.js][storagesyncserviceslistbysubscription]                                       | Get a StorageSyncService list by subscription. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_ListBySubscription.json                                                                        |
| [storageSyncServicesListBySubscriptionSample.js][storagesyncserviceslistbysubscriptionsample]                           | Get a StorageSyncService list by subscription. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_ListBySubscription.json                                                                        |
| [storageSyncServicesUpdate.js][storagesyncservicesupdate]                                                               | Patch a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Update.json                                                                                                 |
| [storageSyncServicesUpdateSample.js][storagesyncservicesupdatesample]                                                   | Patch a given StorageSyncService. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/StorageSyncServices_Update.json                                                                                                 |
| [syncGroupsCreate.js][syncgroupscreate]                                                                                 | Create a new SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Create.json                                                                                                                    |
| [syncGroupsCreateSample.js][syncgroupscreatesample]                                                                     | Create a new SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Create.json                                                                                                                    |
| [syncGroupsDelete.js][syncgroupsdelete]                                                                                 | Delete a given SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Delete.json                                                                                                                  |
| [syncGroupsDeleteSample.js][syncgroupsdeletesample]                                                                     | Delete a given SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Delete.json                                                                                                                  |
| [syncGroupsGet.js][syncgroupsget]                                                                                       | Get a given SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Get.json                                                                                                                        |
| [syncGroupsGetSample.js][syncgroupsgetsample]                                                                           | Get a given SyncGroup. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_Get.json                                                                                                                        |
| [syncGroupsListByStorageSyncService.js][syncgroupslistbystoragesyncservice]                                             | Get a SyncGroup List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_ListByStorageSyncService.json                                                                                                    |
| [syncGroupsListByStorageSyncServiceSample.js][syncgroupslistbystoragesyncservicesample]                                 | Get a SyncGroup List. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/SyncGroups_ListByStorageSyncService.json                                                                                                    |
| [workflowsAbort.js][workflowsabort]                                                                                     | Abort the given workflow. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Workflows_Abort.json                                                                                                                    |
| [workflowsAbortSample.js][workflowsabortsample]                                                                         | Abort the given workflow. x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Workflows_Abort.json                                                                                                                    |
| [workflowsGet.js][workflowsget]                                                                                         | Get Operation status x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/LocationOperationStatus_Get.json                                                                                                             |
| [workflowsGetSample.js][workflowsgetsample]                                                                             | Get Workflows resource x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Workflows_Get.json                                                                                                                         |
| [workflowsListByStorageSyncService.js][workflowslistbystoragesyncservice]                                               | Get a Workflow List x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Workflows_ListByStorageSyncService.json                                                                                                       |
| [workflowsListByStorageSyncServiceSample.js][workflowslistbystoragesyncservicesample]                                   | Get a Workflow List x-ms-original-file: specification/storagesync/resource-manager/Microsoft.StorageSync/stable/2020-09-01/examples/Workflows_ListByStorageSyncService.json                                                                                                       |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node cloudEndpointsCreate.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env  node cloudEndpointsCreate.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[cloudendpointscreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsCreate.js
[cloudendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsCreateSample.js
[cloudendpointsdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsDelete.js
[cloudendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsDeleteSample.js
[cloudendpointsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsGet.js
[cloudendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsGetSample.js
[cloudendpointslistbysyncgroup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsListBySyncGroup.js
[cloudendpointslistbysyncgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsListBySyncGroupSample.js
[cloudendpointspostbackup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsPostBackup.js
[cloudendpointspostbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsPostBackupSample.js
[cloudendpointspostrestore]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsPostRestore.js
[cloudendpointspostrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsPostRestoreSample.js
[cloudendpointsprebackup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsPreBackup.js
[cloudendpointsprebackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsPreBackupSample.js
[cloudendpointsprerestore]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsPreRestore.js
[cloudendpointsprerestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsPreRestoreSample.js
[cloudendpointsrestoreheartbeat]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsRestoreheartbeat.js
[cloudendpointsrestoreheartbeatsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsRestoreheartbeatSample.js
[cloudendpointstriggerchangedetection]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsTriggerChangeDetection.js
[cloudendpointstriggerchangedetectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/cloudEndpointsTriggerChangeDetectionSample.js
[locationoperationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/locationOperationStatusSample.js
[operationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/operationStatusGetSample.js
[operationslist]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/operationsList.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/operationsListSample.js
[privateendpointconnectionscreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/privateEndpointConnectionsCreate.js
[privateendpointconnectionscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/privateEndpointConnectionsCreateSample.js
[privateendpointconnectionsdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/privateEndpointConnectionsDelete.js
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/privateEndpointConnectionsDeleteSample.js
[privateendpointconnectionsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/privateEndpointConnectionsGet.js
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/privateEndpointConnectionsGetSample.js
[privateendpointconnectionslistbystoragesyncservice]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/privateEndpointConnectionsListByStorageSyncService.js
[privateendpointconnectionslistbystoragesyncservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/privateEndpointConnectionsListByStorageSyncServiceSample.js
[privatelinkresourceslist]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/privateLinkResourcesList.js
[privatelinkresourceslistbystoragesyncservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/privateLinkResourcesListByStorageSyncServiceSample.js
[registeredserverscreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/registeredServersCreate.js
[registeredserverscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/registeredServersCreateSample.js
[registeredserversdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/registeredServersDelete.js
[registeredserversdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/registeredServersDeleteSample.js
[registeredserversget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/registeredServersGet.js
[registeredserversgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/registeredServersGetSample.js
[registeredserverslistbystoragesyncservice]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/registeredServersListByStorageSyncService.js
[registeredserverslistbystoragesyncservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/registeredServersListByStorageSyncServiceSample.js
[registeredserverstriggerrollover]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/registeredServersTriggerRollover.js
[registeredserverstriggerrolloversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/registeredServersTriggerRolloverSample.js
[serverendpointscreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsCreate.js
[serverendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsCreateSample.js
[serverendpointsdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsDelete.js
[serverendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsDeleteSample.js
[serverendpointsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsGet.js
[serverendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsGetSample.js
[serverendpointslistbysyncgroup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsListBySyncGroup.js
[serverendpointslistbysyncgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsListBySyncGroupSample.js
[serverendpointsrecallaction]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsRecallAction.js
[serverendpointsrecallactionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsRecallActionSample.js
[serverendpointsupdate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsUpdate.js
[serverendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/serverEndpointsUpdateSample.js
[storagesyncservicechecknameavailabilityalreadyexists]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServiceCheckNameAvailabilityAlreadyExists.js
[storagesyncservicechecknameavailabilityavailable]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServiceCheckNameAvailabilityAvailable.js
[storagesyncserviceschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesCheckNameAvailabilitySample.js
[storagesyncservicescreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesCreate.js
[storagesyncservicescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesCreateSample.js
[storagesyncservicesdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesDelete.js
[storagesyncservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesDeleteSample.js
[storagesyncservicesget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesGet.js
[storagesyncservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesGetSample.js
[storagesyncserviceslistbyresourcegroup]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesListByResourceGroup.js
[storagesyncserviceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesListByResourceGroupSample.js
[storagesyncserviceslistbysubscription]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesListBySubscription.js
[storagesyncserviceslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesListBySubscriptionSample.js
[storagesyncservicesupdate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesUpdate.js
[storagesyncservicesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/storageSyncServicesUpdateSample.js
[syncgroupscreate]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/syncGroupsCreate.js
[syncgroupscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/syncGroupsCreateSample.js
[syncgroupsdelete]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/syncGroupsDelete.js
[syncgroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/syncGroupsDeleteSample.js
[syncgroupsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/syncGroupsGet.js
[syncgroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/syncGroupsGetSample.js
[syncgroupslistbystoragesyncservice]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/syncGroupsListByStorageSyncService.js
[syncgroupslistbystoragesyncservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/syncGroupsListByStorageSyncServiceSample.js
[workflowsabort]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/workflowsAbort.js
[workflowsabortsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/workflowsAbortSample.js
[workflowsget]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/workflowsGet.js
[workflowsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/workflowsGetSample.js
[workflowslistbystoragesyncservice]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/workflowsListByStorageSyncService.js
[workflowslistbystoragesyncservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagesync/arm-storagesync/samples/v9/javascript/workflowsListByStorageSyncServiceSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-storagesync?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/storagesync/arm-storagesync/README.md
